init the project

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,25 @@
+HELP.md
+target/
+.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
 *.class
 
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
 *.log
 
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
 *.ctxt
 
 ### NetBeans ###
@@ -14,4 +32,6 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### VS Code ###
+.vscode/
 *.jar
